--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "electron": "^1.6.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "yarn": "^0.24.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
