--- a/package.json
+++ b/package.json
@@ -3,8 +3,23 @@
   "version": "0.1.0",
   "main": "js/main.js",
   "description": "Spread image viewer",
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
+    "electron": "^1.6.8",
+    "electron-devtools-installer": "^2.2.0",
+    "jest": "^20.0.3",
+    "rimraf": "^2.6.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
