--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Spread image viewer",
   "dependencies": {
     "canvas": "^1.6.5",
+    "log4js": "^1.1.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
