--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "electron": "^1.6.8",
     "electron-devtools-installer": "^2.2.0",
+    "electron-rebuild": "^1.5.11",
     "jest": "^20.0.3",
     "rimraf": "^2.6.1"
   },
