--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-jest": "^20.0.3",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
+    "cpx": "^1.5.0",
     "electron": "^1.6.8",
     "electron-devtools-installer": "^2.2.0",
     "electron-rebuild": "^1.5.11",
