--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "jest": "^20.0.3",
     "rimraf": "^2.6.1"
   },
+  "babel": {
+    "presets": [
+      "env",
+      "react"
+    ]
+  },
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
