--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cpx": "^1.5.0",
     "electron": "^1.6.8",
     "electron-devtools-installer": "^2.2.0",
+    "electron-packager": "^8.7.0",
     "jest": "^20.0.3",
     "rimraf": "^2.6.1"
   },
@@ -33,9 +34,10 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "clean": "rimraf dest && rimraf .yarnclean && rimraf node_modules && yarn",
-    "build": "./node_modules/.bin/babel src --out-dir dest --ignore *.spec.js && cpx 'src/**/*.{html,css}' dest",
+    "build": "./node_modules/.bin/babel src --out-dir dest --ignore *.spec.js && cpx src/app-config.json dest && cpx 'src/**/*.{html,css}' dest",
     "debug": "yarn run build && yarn run start",
-    "start": "./node_modules/.bin/electron --js-flags='--harmony-tailcalls' ."
+    "start": "./node_modules/.bin/electron --js-flags='--harmony-tailcalls' .",
+    "package": "yarn run build && cpx package/app-config.json dest && ./node_modules/.bin/electron-packager . SpreadImageViewe --platform=darwin --arch=x64 --out=./package --overwrite --ignore=\".DS_Store|.gitignore|LICENSE|README.md|coverage|doc|logs|prototype|sample-resource|src|tags|yarn.lock\""
   },
   "repository": {
     "type": "git",
